--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ repositories {
 
 dependencies {
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
-    implementation 'io.quarkus:quarkus-resteasy-reactive'
+      implementation 'io.quarkus:quarkus-resteasy-reactive'
     implementation 'io.quarkus:quarkus-resteasy-reactive-jackson'
     implementation 'io.quarkus:quarkus-arc'
     // https://mvnrepository.com/artifact/com.oracle.oci.sdk/oci-java-sdk-objectstorage
@@ -22,8 +22,16 @@ dependencies {
     // https://mvnrepository.com/artifact/software.amazon.awssdk/url-connection-client
     implementation  group: 'software.amazon.awssdk', name: 'url-connection-client', version: '2.21.0'
 
-    // https://mvnrepository.com/artifact/io.projectreactor/reactor-core
-    implementation group: 'io.projectreactor', name: 'reactor-core', version: '3.5.11'
+    // https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-multipart-provider
+   // implementation group: 'org.jboss.resteasy', name: 'resteasy-multipart-provider', version: '6.2.5.Final'
+
+
+    // https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-multipart
+    implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-multipart', version: '3.1.3'
+
+
+
+
 
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
